@@ -1,3 +1,6 @@
+2007-01-02 rixed@free.fr
+	* Fix texture mapping coordinates not updated when z-test fails.
+
 2006-12-28 rixed@free.fr
 	* Many fixes (blend on GP2X).
 	* Many GL fixes for Egoboo port.
